# lumiscript

./: .gitignore  Cargo.toml  README.md  core.ls
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  line_column.rs  source_code.rs
compiler/src/generator/: chunk.rs  generator.rs  mod.rs
compiler/src/scanner/: token.rs
compiler/src/syntax/: ast.rs  mod.rs  span.rs
lumi_bc_e/: Cargo.toml
lumi_bc_e/src/: ast.rs  bytecode.rs  chunk.rs  emitter.rs  expr.rs  lib.rs  stmt.rs
lumi_c/: Cargo.toml
lumi_c/src/: compile_error.rs  compiler.rs  lib.rs
lumi_c/src/generator/: bytecode.rs  chunk.rs  constant.rs  generator.rs  mod.rs  obj.rs
lumi_c/src/scanner/: lexer.rs  token_stream.rs
lumi_c/src/syntax/: ast.rs  mod.rs  parse.rs  symbols.rs  type.rs
lumi_cli/: Cargo.toml
lumi_cli/src/: main.rs
lumi_core/: Cargo.toml
lumi_core/libs/: core.ls  std.ls
lumi_core/src/: error_reporter.rs  lib.rs  line_column.rs  source_code.rs
lumi_lxr/: Cargo.toml
lumi_lxr/src/: lexer.rs  lib.rs  token.rs  token_stream.rs
lumi_lxr/src/utils/: line_column.rs  mod.rs  source_code.rs  span.rs
lumi_psr/: Cargo.toml
lumi_psr/src/: ast.rs  display_tree.rs  lib.rs  param.rs  parse.rs  parser.rs  symbols.rs  ty.rs
lumi_psr/src/exprs/: binary.rs  call.rs  class.rs  get.rs  ident.rs  lit.rs  mod.rs  paren.rs  unary.rs
lumi_psr/src/stmts/: block.rs  break.rs  class.rs  const.rs  continue.rs  expr.rs  for.rs  fun.rs  if.rs  impl.rs  let.rs  mod.rs  println.rs  return.rs  trait.rs  while.rs
lumi_tc/: Cargo.toml
lumi_tc/src/: lib.rs
lumi_vm/: Cargo.toml
lumi_vm/core/: lib.ls
lumi_vm/src/: call_frame.rs  chunk.rs  const_stack.rs  ctx.rs  emitter.rs  frame.rs  lib.rs  memory.rs  obj.rs  obj_stack.rs  object.rs  raw_ptr.rs  runtime_error.rs  scope.rs  stack_trace.rs  virtual_machine.rs  vm.rs
lumi_vm/src/operations/: add.rs  (+13 more)
samples/: fib.ls  point.ls
src/: error_reporter.rs  main.rs
src/core/: lib.ls  std.ls
src/scanner/: lexer.rs  token.rs
src/syntax/: expr.rs  mod.rs  parse.rs  span.rs  stmt.rs
type_checker/: Cargo.toml
virtual_machine/src/: lib.rs
(+115 files in other folders)
