[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
type_checker = { path = "../type_checker" }
virtual_machine = { path = "../virtual_machine" }
lumi_core = { path = "../lumi_core" }
clap = { version = "4.4.18", features = ["derive"] }
