[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lumi_tc = { path = "../lumi_tc" }
lumi_lxr = { path = "../lumi_lxr" }
lumi_psr = { path = "../lumi_psr" }
lumi_vm = { path = "../lumi_vm" }
colored = "2.1.0"
